--- a/Post-Clean.Rmd
+++ b/Post-Clean.Rmd
@@ -45,7 +45,8 @@ participant_extra <- read_csv(
     .default = col_character(),
     survey_round = col_integer(),
     part_id = col_integer(),
-    date = col_date("%Y.%m.%d"),#Aanpassen voor Zenodo?
+    date = col_date("%Y-%m-%d"),
+    survey_date = col_date("%Y-%m-%d"),
     part_vacc = col_integer(),
     hh_size = col_integer()
   )
@@ -357,6 +358,20 @@ contact_data <- contact_data %>%
     cnt_location = if_else(cnt_home == 1, "Home", cnt_location),
     cnt_location = if_else(cnt_home == 1 & cnt_household == 1, "HomeHH", cnt_location),
     cnt_location = if_else(is.na(cnt_location), "Unknown", cnt_location)
+  )
+```
+
+Text
+
+# Recode Elevated Risk
+
+Text
+
+```{r}
+participant_data <- participant_data %>%
+  mutate(
+    part_elevated_risk = coalesce(tolower(part_elevated_risk), part_high_risk),
+    part_elevated_risk = if_else(grepl("answer", part_elevated_risk), "no answer", part_elevated_risk)
   )
 ```
 
